# Capybara

./: .gitignore  Cargo.toml  Makefile  README.md  package.json  pyproject.toml  turbo.json
client/: package.json
client/src/app/: layout.tsx  page.tsx
client/src/components/: mode-toggle.tsx
client/src/components/ui/: dropdown-menu.tsx  sonner.tsx
client/src/styles/: globals.css
engine/: capture.py  config.py  main.py  motor.py  pyproject.toml  resolver.py  solver.py  stellarium.py
mcp/: pyproject.toml
pulsar/: Cargo.toml
pulsar/crates/api/: Cargo.toml
pulsar/crates/api/src/: lib.rs
pulsar/crates/core/: Cargo.toml
pulsar/crates/core/src/: coord.rs  lib.rs  types.rs
pulsar/crates/solver/: Cargo.toml
pulsar/crates/solver/src/: lib.rs  resolver.rs
