[project]
name = "capybara"
version = "0.1.0"
requires-python = ">=3.14"

[tool.uv.workspace]
members = [
    "engine",
    "mcp",
]

[tool.ruff]
target-version = "py314"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[dependency-groups]
dev = [
    "ruff>=0.15.15",
    "ty>=0.0.42",
]
