[package]
name = "pulsar-api"
version = "0.1.0"
edition = "2024"
description = "HTTP server + WebSocket — axum"

[dependencies]
pulsar-core = { path = "../core" }
pulsar-solver = { path = "../solver" }
axum = { version = "0.8", features = ["ws"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["cors"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
tracing = "0.1"
tracing-subscriber = "0.3"
